# practical-rust-web-projects

./: LICENSE.txt  README.md  errata.md
Ch02/catdex/: 3  Cargo.toml  start_database.sh
Ch02/catdex/migrations/2020-05-26-192813_create_cats/: down.sql  up.sql
Ch02/catdex/src/: main.rs
Ch02/catdex/static/: cat.html  index.html
Ch02/hello-world/: Cargo.toml
Ch02/hello-world/src/: main.rs
Ch03/rest_api/catdex/: Cargo.toml  cert.pem  create_cert.sh  key-no-password.pem  key.pem
Ch03/rest_api/catdex/src/: errors.rs  main.rs  models.rs  schema.rs
Ch03/rest_api/catdex/static/: add.html  cat.html  index.html
Ch03/rest_api/catdex/static/css/: cat.css
Ch04/websocket/: Cargo.toml  pre-commit
Ch04/websocket/client/: chat.html  chat.js  index.html  index.js  json_chat.html
Ch04/websocket/examples/: 5_sec_ping_timer.rs  broadcast.rs  broadcast_client.rs  chat_server.rs  echo_server.rs  json_chat_server.rs  push_notification.rs  unresponsive_client.rs  unresponsive_timer.rs
Ch05/serverless-catdex/: Cargo.toml  package-lock.json  package.json  serverless.yml
Ch05/serverless-catdex/cat_post/: Cargo.toml
Ch05/serverless-catdex/cat_post/src/: main.rs
Ch05/serverless-catdex/cats/: Cargo.toml
Ch05/serverless-catdex/cats/src/: main.rs
Ch05/serverless-hello-world/: Cargo.toml
Ch05/serverless-hello-world/src/: main.rs
Ch06/hello-wasm/: Cargo.toml  LICENSE_MIT
Ch06/hello-wasm/client/: index.js  package-lock.json  package.json
Ch06/hello-wasm/src/: lib.rs
Ch06/wasm-image-processing/: Cargo.toml
Ch06/wasm-image-processing/client/: index.html  index.js  package-lock.json  package.json
Ch06/wasm-image-processing/src/: lib.rs
Ch06/yew-image-processing/: Cargo.toml  README.md  package-lock.json  webpack.config.js
Ch06/yew-image-processing/.github/workflows/: check.yml  deploy.yml
Ch06/yew-image-processing/src/: app.rs  lib.rs
Ch06/yew-image-processing/static/: index.html
