[package]
name = "catdex"
version = "0.1.0"
authors = ["Shing Lyu <shing.lyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3.0"
serde_json = "1.0.53"
handlebars = { version = "3.0.1", features = ["dir_source"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = "1.0.110"
r2d2 = "0.8.8"
awmp = "0.6.0"
