[package]
name = "websocket"
version = "0.1.0"
authors = ["Shing Lyu <shing.lyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive= "1.0.104"
