[package]
name = "serverless-hello-world"
version = "0.1.0"
authors = ["Shing Lyu <shing.lyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
tokio = "0.1"
log = "^0.4"
simple_logger = "^1.11.0"
simple-error = "^0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
