[package]
name = "cat_post"
version = "0.1.0"
authors = ["Shing Lyu <shing.lyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
serde = "1.0.114"
rusoto_s3 = "0.45.0"
rusoto_credential = "0.45.0"
